fixed spacing on the wall

--- a/app/assets/stylesheets/layouts/_wall-nav.scss
+++ b/app/assets/stylesheets/layouts/_wall-nav.scss
@@ -26,7 +26,7 @@
 
 .tab-content > .active {
   min-height: 200px;
-  padding: 0.5em;
+  // padding: 0.5em;
   border-radius: 10px;
   // border: 3px solid;
   margin-top: 5px;
